# test-image-graph

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  changelog.txt  deb_package_generation.sh  deploy.sh  deploy_deb.sh  toolchain_radxa.cmake  utils.sh
src/: main.cpp  menu.cpp  menu.h  menu.ui
translations/: testImageGraph_ru.ts
